--- a/WebServer/Views/Meeting/Add_organizor.cshtml
+++ b/WebServer/Views/Meeting/Add_organizor.cshtml
@@ -81,8 +81,7 @@
                 </div>
                 <div id="meetingcontent">
                     <div>会议概况：</div>
-                    <textarea name="meeting.meetingSummary" class="meetingSummary"  >
-                        @Model.meeting.meetingSummary
+                    <textarea name="meeting.meetingSummary" class="meetingSummary"  >@Model.meeting.meetingSummary
                     </textarea>
                 </div>               
                 <input type="button" class="btn btn-default form-actions no-color" id="addMeeting_next" value="下一步" />
