--- a/WebServer/Views/Meeting/Edit_organizor.cshtml
+++ b/WebServer/Views/Meeting/Edit_organizor.cshtml
@@ -75,8 +75,7 @@
 
             <div id="meetingcontent">
                 <div>会议概况：</div>
-                <textarea name="meeting.meetingSummary" class="meetingSummary" form="meetingForm">
-                    @Model.meeting.meetingSummary
+                <textarea name="meeting.meetingSummary" class="meetingSummary" form="meetingForm">@Model.meeting.meetingSummary
                 </textarea>
             </div>     
         </div>
