--- a/WebServer/Views/User/Add_admin.cshtml
+++ b/WebServer/Views/User/Add_admin.cshtml
@@ -55,14 +55,8 @@
             </div>
             <div>
                 <strong>等级：</strong>
-                <select name="selectLevel" id="selectLevel" class="xla_k">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
+                <input type="number" id="selectLevel">
             </div>
-
             <div><strong>详细描述：</strong></div><textarea id="description"></textarea>
 
         </div>
