--- a/WebServer/less/delegate/seatArrange_LongTable.less
+++ b/WebServer/less/delegate/seatArrange_LongTable.less
@@ -1,17 +1,42 @@
 body {
     
 }
-
-.seatArrange-box{
-    overflow:scroll;
-    border:1px solid;
-    position:relative;
-    width:825px;
-    height:625px;
-}
-
 canvas{
     box-shadow:0 0 10px rgba(0,0,0,0.2);
     margin: auto;
     display: block;
+}
+
+#mainContent{
+     margin-top:10%;
+}
+
+.seat_functions{
+    
+}
+
+.seatInfos{
+    float:left;
+    width:10%;
+}
+
+.seatArrange-box{
+    /*overflow:scroll;*/
+    border:1px solid;
+    position:relative;
+
+    float:left;
+}
+
+.introduction{
+    
+}
+
+.content-right{
+    padding-left:65%;
+
+}
+
+li{
+    list-style-type:decimal;
 }
